test/assets/invalid/expect-char-in-tuple.hs
a :: (Char, Char, String)
a = ("1", 'A', "3")